[package]
name = "discord-draw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
poise = "0.5.2"
tokio = { version = "1.23.1", features = [
    "rt-multi-thread",
    "process",
    "io-std",
] }
